--- a/rqt_gauges/src/rqt_gauges/my_plugin.ui
+++ b/rqt_gauges/src/rqt_gauges/my_plugin.ui
@@ -6,12 +6,12 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>300</height>
+    <width>40</width>
+    <height>40</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Form</string>
+   <string>Gauge</string>
   </property>
  </widget>
  <resources/>
